refactor: added device kind
